--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-helmet": "^5.2.1",
+        "react-particles-js": "^2.7.0",
+        "three": "^0.111.0",
         "typestyle": "^2.0.4"
     },
     "devDependencies": {
