--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gatsby-plugin-intl": "^0.3.2",
         "gatsby-plugin-manifest": "^2.2.30",
         "gatsby-plugin-offline": "^3.0.24",
+        "gatsby-plugin-postcss": "^2.1.16",
         "gatsby-plugin-react-helmet": "^3.1.16",
         "gatsby-plugin-sharp": "^2.3.4",
         "gatsby-plugin-styled-components": "^3.1.14",
@@ -27,7 +28,8 @@
         "typestyle": "^2.0.4"
     },
     "devDependencies": {
-        "prettier": "^1.19.1"
+        "prettier": "^1.19.1",
+        "tailwindcss": "^1.1.4"
     },
     "keywords": [
         "gatsby"
