--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "gatsby-plugin-intl": "^0.3.2",
         "gatsby-plugin-manifest": "^2.2.30",
         "gatsby-plugin-offline": "^3.0.24",
-        "gatsby-plugin-postcss": "^2.1.16",
         "gatsby-plugin-react-helmet": "^3.1.16",
         "gatsby-plugin-sharp": "^2.3.4",
         "gatsby-plugin-styled-components": "^3.1.14",
@@ -20,6 +19,7 @@
         "gatsby-source-filesystem": "^2.1.39",
         "gatsby-transformer-sharp": "^2.3.6",
         "gsap": "^3.0.1",
+        "postcss-import": "^12.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
@@ -30,6 +30,7 @@
         "typestyle": "^2.0.4"
     },
     "devDependencies": {
+        "gatsby-plugin-postcss": "^2.1.18",
         "prettier": "^1.19.1",
         "tailwindcss": "^1.1.4"
     },
