--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-    "name": "gatsby-starter-default",
-    "private": true,
-    "description": "A simple starter to get up and developing quickly with Gatsby",
-    "version": "0.1.0",
-    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-    "dependencies": {
-        "gatsby": "^2.18.4",
-        "gatsby-image": "^2.2.34",
-        "gatsby-image-background-slider": "0.0.1",
-        "gatsby-plugin-intl": "^0.3.2",
-        "gatsby-plugin-manifest": "^2.2.30",
-        "gatsby-plugin-offline": "^3.0.24",
-        "gatsby-plugin-react-helmet": "^3.1.16",
-        "gatsby-plugin-sharp": "^2.3.4",
-        "gatsby-plugin-styled-components": "^3.1.14",
-        "gatsby-plugin-transition-link": "^1.16.2",
-        "gatsby-plugin-typescript": "^2.1.20",
-        "gatsby-source-filesystem": "^2.1.39",
-        "gatsby-transformer-sharp": "^2.3.6",
-        "gsap": "^3.0.1",
-        "postcss-import": "^12.0.1",
-        "prop-types": "^15.7.2",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-helmet": "^5.2.1",
-        "react-particles-js": "^2.7.0",
-        "react-responsive-carousel": "^3.1.51",
-        "three": "^0.111.0",
-        "typestyle": "^2.0.4"
-    },
-    "devDependencies": {
-        "gatsby-plugin-postcss": "^2.1.18",
-        "prettier": "^1.19.1",
-        "tailwindcss": "^1.1.4"
-    },
-    "keywords": [
-        "gatsby"
-    ],
-    "license": "MIT",
-    "scripts": {
-        "build": "gatsby build",
-        "develop": "gatsby develop",
-        "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "start": "npm run develop",
-        "serve": "gatsby serve",
-        "clean": "gatsby clean",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-    },
-    "bugs": {
-        "url": "https://github.com/gatsbyjs/gatsby/issues"
-    }
+  "name": "gatsby-starter-default",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "dependencies": {
+    "gatsby": "^2.24.14",
+    "gatsby-image": "^2.4.14",
+    "gatsby-image-background-slider": "0.0.1",
+    "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-manifest": "^2.4.21",
+    "gatsby-plugin-offline": "^3.2.21",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.23",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-transition-link": "^1.20.2",
+    "gatsby-plugin-typescript": "^2.4.16",
+    "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-sharp": "^2.5.11",
+    "gsap": "^3.4.2",
+    "postcss-import": "^12.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-particles-js": "^2.7.1",
+    "react-responsive-carousel": "^3.2.9",
+    "three": "^0.111.0",
+    "typestyle": "^2.1.0"
+  },
+  "devDependencies": {
+    "gatsby-plugin-postcss": "^2.3.11",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.6.0"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "dev": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
