--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "gatsby": "^2.24.14",
     "gatsby-image": "^2.4.14",
     "gatsby-image-background-slider": "0.0.1",
+    "gatsby-plugin-brotli": "^1.3.1",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.4.21",
+    "gatsby-plugin-minify-html": "^1.0.1",
     "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.23",
